--- a/views/complete.erb
+++ b/views/complete.erb
@@ -39,12 +39,12 @@
         <p>ありがとうございました。送信を受け付けました。</p>
         <p>3営業日以内をめどにご返信いたしますので、しばらくお待ちください。</p>
         <table class="table">
+            <h2>送信内容</h2>
             <% company = params['company'] %>
             <% name = params['name'] %>
             <% mail = params['mail'] %>
             <% tel = params['tel'] %>
             <% content = params['content'] %>
-            <h2>送信内容</p>
             <tbody>
                 <tr>
                     <td>会社名</td>
